added the missing python packages

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -134,6 +134,8 @@ parts:
       - simplejson
       - psutil
       - gevent
+      - websockets
+      - GPUtil
     organize:
       usr/lib/*/samba/*: usr/lib/
 
